--- a/notebooks/Doc2Vec_pipeline_assembly.ipynb
+++ b/notebooks/Doc2Vec_pipeline_assembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fewer-aberdeen",
+   "id": "royal-hierarchy",
    "metadata": {},
    "source": [
     "# Packaging tests"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "floppy-syndication",
+   "id": "reverse-breed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,24 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "subsequent-trunk",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "discrete-sharing",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "rocky-apartment",
+   "id": "tested-sheet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "qualified-supervisor",
+   "id": "split-lincoln",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ancient-atmosphere",
+   "id": "ignored-format",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "thermal-separation",
+   "id": "solar-relief",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +100,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beginning-papua",
+   "id": "satisfied-cause",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "extended-license",
+   "id": "ethical-insider",
    "metadata": {},
    "source": [
     "# functions for pipeline"
@@ -132,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lonely-jerusalem",
+   "id": "scientific-cookbook",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "multiple-surgery",
+   "id": "durable-vulnerability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "laden-research",
+   "id": "negative-weight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "criminal-playback",
+   "id": "executive-melbourne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "incomplete-spotlight",
+   "id": "available-answer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "institutional-houston",
+   "id": "popular-peripheral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,69 +200,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "combined-constraint",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_to_train = texts_tagged_small # texts_tagged_small, texts_tagged\n",
-    "\n",
-    "# build vocabulary with CBOW (dm=0)\n",
-    "cores = multiprocessing.cpu_count()\n",
-    "model_dbow = Doc2Vec(documents=data_to_train,\n",
-    "                     dm=0,\n",
-    "                     alpha=0.025,\n",
-    "                     vector_size=len(data_to_train), \n",
-    "                     min_count=1,\n",
-    "                     workers=cores\n",
-    "                    )\n",
-    "\n",
-    "# train the model\n",
-    "model_dbow.train(data_to_train, total_examples=model_dbow.corpus_count, epochs=15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "enormous-herald",
+   "execution_count": 41,
+   "id": "sound-appendix",
    "metadata": {},
    "outputs": [],
    "source": [
     "# infer vector and get similarity\n",
-    "def get_similar_jobs(tokenized_job, number_offers):\n",
+    "def get_similar_jobs(tokenized_job, number_offers=10):\n",
     "    ''' input: tokenized job offers, number of offers \n",
     "        returns tags of top x most similar job offers and similarity probabilities\n",
     "    '''\n",
-    "\n",
     "    # infer vector from text \n",
     "    infer_vector = model_loaded.infer_vector(tokenized_job)\n",
     "    # find similar offers\n",
     "    similar_documents = model_loaded.docvecs.most_similar([infer_vector], topn = number_offers)\n",
     "\n",
-    "    return similar_documents\n"
+    "    return similar_documents"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "close-harvest",
-   "metadata": {
-    "tags": []
-   },
+   "id": "polished-lease",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "increased-charles",
+   "id": "noticed-batch",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "varying-genome",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "equivalent-sound",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "obvious-newspaper",
+   "id": "figured-petite",
    "metadata": {},
    "source": [
     "## start pipeline"
@@ -287,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "handmade-corner",
+   "id": "ecological-mayor",
    "metadata": {},
    "outputs": [],
    "source": [
