lunch time update doc2vec

--- a/notebooks/Doc2Vec_pipeline_assembly.ipynb
+++ b/notebooks/Doc2Vec_pipeline_assembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "royal-hierarchy",
+   "id": "classical-politics",
    "metadata": {},
    "source": [
     "# Packaging tests"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "reverse-breed",
+   "id": "organized-michigan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "tested-sheet",
+   "id": "meaning-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "split-lincoln",
+   "id": "developed-circumstances",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ignored-format",
+   "id": "changing-spirituality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "solar-relief",
+   "id": "original-suspect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,62 +98,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "satisfied-cause",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "ethical-insider",
+   "id": "emerging-capability",
    "metadata": {},
    "source": [
     "# functions for pipeline"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "scientific-cookbook",
+   "cell_type": "markdown",
+   "id": "accurate-interference",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "durable-vulnerability",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def tag_texts(texts):\n",
-    "    ''' input: pandas series of datasets to use in the model\n",
-    "        returns texts with identification tag\n",
-    "    '''\n",
-    "    texts_tagged = [TaggedDocument(text, tags=['tag_'+str(tag)]) for tag, text in enumerate(texts)]\n",
+    "**Workflow:**\n",
     "\n",
-    "    return texts_tagged\n",
-    "\n",
-    "texts_tagged = tag_texts(texts)\n",
-    "#texts_tagged[0]"
+    "1. load the model if present. if not, instanciate model\n",
+    "2. add a tag to all job offers\n",
+    "3. train model on tagged texts (in the saved model I trained it on 3000 datapoints, 15 epochs)\n",
+    "4. save the model (if model not present)\n",
+    "5. find similar job offers:\n",
+    "    get recomendation based on copy-pasted offer or get recomendation based on ???? (decide this); \n",
+    "    output of top 10 (or another number) similar to input offer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "negative-weight",
+   "execution_count": 46,
+   "id": "animal-cincinnati",
    "metadata": {},
    "outputs": [],
    "source": [
-    "texts_tagged_small = texts_tagged[:3000]"
+    "def load_Doc2Vec(path_to_files):\n",
+    "    '''loads and returns pre-trained model'''\n",
+    "    model_dbow = Doc2Vec.load(path_to_files)\n",
+    "    \n",
+    "    return model_dbow"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "executive-melbourne",
+   "id": "comparable-shirt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,8 +156,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "english-contest",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tag_texts(texts):\n",
+    "    ''' input: pandas series of datasets to use in the model\n",
+    "        returns texts with identification tag\n",
+    "    '''\n",
+    "    texts_tagged = [TaggedDocument(text, tags=['tag_'+str(tag)]) for tag, text in enumerate(texts)]\n",
+    "\n",
+    "    return texts_tagged\n",
+    "\n",
+    "texts_tagged = tag_texts(texts)\n",
+    "#texts_tagged[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
-   "id": "available-answer",
+   "id": "classical-lawsuit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "popular-peripheral",
+   "id": "unavailable-senator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,28 +204,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "sound-appendix",
+   "execution_count": 54,
+   "id": "imperial-sequence",
    "metadata": {},
    "outputs": [],
    "source": [
     "# infer vector and get similarity\n",
-    "def get_similar_jobs(tokenized_job, number_offers=10):\n",
-    "    ''' input: tokenized job offers, number of offers \n",
-    "        returns tags of top x most similar job offers and similarity probabilities\n",
+    "def find_similar_jobs(model, tokenized_offers, number_offers=10):\n",
+    "    ''' inputs: Doc2Vec model, string of a tokenized job offer, number of offers. \n",
+    "        returns: tags of top x most similar job offers and similarity probabilities\n",
     "    '''\n",
     "    # infer vector from text \n",
-    "    infer_vector = model_loaded.infer_vector(tokenized_job)\n",
+    "    infer_vector = model.infer_vector(tokenized_offers)\n",
     "    # find similar offers\n",
-    "    similar_documents = model_loaded.docvecs.most_similar([infer_vector], topn = number_offers)\n",
+    "    similar_documents = model.docvecs.most_similar([infer_vector], topn = number_offers)\n",
     "\n",
     "    return similar_documents"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "tamil-township",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts_tagged_small = texts_tagged[:3000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "light-chance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_Doc2Vec('../../../models/doc2vec_3000_15_epochs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "pressed-camping",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('tag_272', 0.9891966581344604),\n",
+       " ('tag_754', 0.9883853197097778),\n",
+       " ('tag_0', 0.9864751100540161),\n",
+       " ('tag_654', 0.7715011835098267),\n",
+       " ('tag_368', 0.7501724362373352),\n",
+       " ('tag_382', 0.7268041372299194),\n",
+       " ('tag_100', 0.6558924913406372),\n",
+       " ('tag_723', 0.6515829563140869),\n",
+       " ('tag_65', 0.6219576597213745),\n",
+       " ('tag_111', 0.6144018173217773)]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_similar_jobs(model, texts_tagged_small[0][0], 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "polished-lease",
+   "id": "hungry-comedy",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -229,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noticed-batch",
+   "id": "minor-consideration",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -237,22 +291,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varying-genome",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "equivalent-sound",
+   "id": "christian-necklace",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "figured-petite",
+   "id": "satisfactory-plastic",
    "metadata": {},
    "source": [
     "## start pipeline"
@@ -261,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ecological-mayor",
+   "id": "overhead-interface",
    "metadata": {},
    "outputs": [],
    "source": [
