doc2vec pipeline

--- a/notebooks/Doc2Vec_pipeline_assembly.ipynb
+++ b/notebooks/Doc2Vec_pipeline_assembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "classical-politics",
+   "id": "welsh-balloon",
    "metadata": {},
    "source": [
     "# Packaging tests"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "organized-michigan",
+   "id": "permanent-aside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,15 +19,15 @@
     "import json #\n",
     "import multiprocessing#\n",
     "\n",
-    "import joblib \n",
-    "import pandas as pd\n",
-    "from nltk.corpus import stopwords \n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "import joblib\n",
-    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
-    "from pprint import pprint\n",
-    "import math\n",
+    "# import joblib \n",
+    "# import pandas as pd\n",
+    "# from nltk.corpus import stopwords \n",
+    "# from nltk.tokenize import word_tokenize\n",
+    "# from nltk.stem import WordNetLemmatizer\n",
+    "# import joblib\n",
+    "# from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "# from pprint import pprint\n",
+    "# import math\n",
     "\n",
     "\n"
    ]
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "meaning-contamination",
+   "id": "departmental-evolution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "developed-circumstances",
+   "id": "sacred-international",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "changing-spirituality",
+   "id": "textile-probability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "original-suspect",
+   "id": "competitive-circuit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,15 +99,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emerging-capability",
+   "id": "sapphire-indie",
    "metadata": {},
    "source": [
-    "# functions for pipeline"
+    "# functions for pipeline (ignore code above)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-interference",
+   "id": "promotional-martin",
    "metadata": {},
    "source": [
     "**Workflow:**\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "animal-cincinnati",
+   "id": "unique-reservoir",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "comparable-shirt",
+   "id": "infrared-illness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "english-contest",
+   "id": "juvenile-isaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "classical-lawsuit",
+   "id": "quiet-stress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unavailable-senator",
+   "id": "charitable-novelty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "imperial-sequence",
+   "id": "convertible-registrar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "tamil-township",
+   "id": "multiple-christmas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "light-chance",
+   "id": "distant-lewis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "pressed-camping",
+   "id": "statistical-shape",
    "metadata": {},
    "outputs": [
     {
@@ -273,32 +273,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "hungry-comedy",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "minor-consideration",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "christian-necklace",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "satisfactory-plastic",
+   "id": "ancient-detection",
    "metadata": {},
    "source": [
     "## start pipeline"
@@ -307,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "overhead-interface",
+   "id": "utility-workshop",
    "metadata": {},
    "outputs": [],
    "source": [
