--- a/notebooks/Doc2Vec_pipeline_assembly.ipynb
+++ b/notebooks/Doc2Vec_pipeline_assembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "welsh-balloon",
+   "id": "baking-alexander",
    "metadata": {},
    "source": [
     "# Packaging tests"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "permanent-aside",
+   "id": "flying-chile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "departmental-evolution",
+   "id": "optimum-miracle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sacred-international",
+   "id": "absent-grant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "textile-probability",
+   "id": "driven-environment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "competitive-circuit",
+   "id": "supposed-manhattan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sapphire-indie",
+   "id": "compliant-fabric",
    "metadata": {},
    "source": [
     "# functions for pipeline (ignore code above)"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promotional-martin",
+   "id": "third-volume",
    "metadata": {},
    "source": [
     "**Workflow:**\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "unique-reservoir",
+   "id": "dutch-marathon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "infrared-illness",
+   "id": "fancy-observation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
     "    model_dbow = Doc2Vec(documents=text_tagged,\n",
     "                         dm=0,\n",
     "                         alpha=0.025,\n",
-    "                         vector_size=len(df), \n",
+    "                         vector_size=len(text_tagged), \n",
     "                         min_count=1,\n",
     "                         workers=cores,\n",
     "                        )"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "juvenile-isaac",
+   "id": "mysterious-southeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "quiet-stress",
+   "id": "municipal-peninsula",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charitable-novelty",
+   "id": "royal-citizen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "convertible-registrar",
+   "id": "bright-investor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "multiple-christmas",
+   "id": "computational-purpose",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "distant-lewis",
+   "id": "headed-virgin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "statistical-shape",
+   "id": "controversial-register",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-detection",
+   "id": "surgical-detection",
    "metadata": {},
    "source": [
     "## start pipeline"
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "utility-workshop",
+   "id": "powered-sense",
    "metadata": {},
    "outputs": [],
    "source": [
