--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -293,44 +293,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "muslim-riverside",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_json = df.to_json()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "listed-variable",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['responsible',\n",
-       " 'improvement',\n",
-       " 'taledo',\n",
-       " '’',\n",
-       " 'search',\n",
-       " 'matching',\n",
-       " 'engine',\n",
-       " 'candidates',\n",
-       " 'jobs',\n",
-       " 'business',\n",
-       " 'drivers',\n",
-       " 'data',\n",
-       " 'science']"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "df_json"
+   ]
   },
   {
    "cell_type": "code",
