implemented skills utils

--- a/notebooks/Jasmin_utils.skills.ipynb
+++ b/notebooks/Jasmin_utils.skills.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "intensive-major",
+   "id": "ultimate-research",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "current-companion",
+   "id": "dutch-communications",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "rough-demographic",
+   "id": "earlier-tooth",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "immune-montgomery",
+   "id": "hourly-cedar",
    "metadata": {},
    "outputs": [
     {
@@ -632,16 +632,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "superior-weight",
+   "execution_count": 27,
+   "id": "aggressive-cowboy",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           NULL\n",
+       "1           NULL\n",
+       "2           NULL\n",
+       "3           NULL\n",
+       "4           NULL\n",
+       "          ...   \n",
+       "5876     25907.0\n",
+       "5877     33275.0\n",
+       "5878    148114.0\n",
+       "5879      4618.0\n",
+       "5880     11610.0\n",
+       "Name: reviews, Length: 5881, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "toxic-electric",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Job</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NULL</td>\n",
+       "      <td>5262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>data science</td>\n",
+       "      <td>178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>data engineer</td>\n",
+       "      <td>172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>data scientist</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>business intelligence</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Job  Count\n",
+       "0                   NULL   5262\n",
+       "1           data science    178\n",
+       "2          data engineer    172\n",
+       "3         data scientist    161\n",
+       "4  business intelligence    108"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source_job = pd.DataFrame(df['query_text'].value_counts().reset_index())\n",
+    "source_job= source_job.rename(columns = {'index':'Job', 'query_text':'Count'})\n",
+    "source_job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "solved-aberdeen",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    5760\n",
+       "True      121\n",
+       "Name: job_title, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jd = 'Data Engineer'\n",
+    "regex_jd = '^'+ jd\n",
+    "#source_jd = data.loc[df.job_title.str.contains(regex_jd)].value_counts().reset_index()\n",
+    "df.job_title.str.contains(regex_jd).value_counts()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "endangered-algeria",
+   "id": "massive-pittsburgh",
    "metadata": {},
    "outputs": [],
    "source": []
